crates/cyrs-syntax/tests/snapshots/syntax_snapshots__clause_unwind_list.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"UNWIND [1, 2, 3] AS x RETURN x\")"
---
SOURCE_FILE@0..30
  STATEMENT@0..30
    UNWIND_CLAUSE@0..21
      UNWIND_KW@0..6 "UNWIND"
      LIST_LITERAL@6..16
        WHITESPACE@6..7 " "
        L_BRACK@7..8 "["
        LITERAL_EXPR@8..9
          INT_LITERAL@8..9 "1"
        COMMA@9..10 ","
        LITERAL_EXPR@10..12
          WHITESPACE@10..11 " "
          INT_LITERAL@11..12 "2"
        COMMA@12..13 ","
        LITERAL_EXPR@13..15
          WHITESPACE@13..14 " "
          INT_LITERAL@14..15 "3"
        R_BRACK@15..16 "]"
      WHITESPACE@16..17 " "
      AS_KW@17..19 "AS"
      NAME@19..21
        WHITESPACE@19..20 " "
        IDENT@20..21 "x"
    RETURN_CLAUSE@21..30
      WHITESPACE@21..22 " "
      RETURN_KW@22..28 "RETURN"
      RETURN_BODY@28..30
        RETURN_ITEMS@28..30
          RETURN_ITEM@28..30
            VAR_EXPR@28..30
              WHITESPACE@28..29 " "
              IDENT@29..30 "x"
