crates/cyrs-syntax/tests/snapshots/syntax_snapshots__clause_with_where_filter.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) WITH n WHERE n.age > 21 RETURN n\")"
---
SOURCE_FILE@0..42
  STATEMENT@0..42
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    WITH_CLAUSE@9..33
      WHITESPACE@9..10 " "
      WITH_KW@10..14 "WITH"
      RETURN_BODY@14..33
        RETURN_ITEMS@14..16
          RETURN_ITEM@14..16
            VAR_EXPR@14..16
              WHITESPACE@14..15 " "
              IDENT@15..16 "n"
        WHERE_CLAUSE@16..33
          WHITESPACE@16..17 " "
          WHERE_KW@17..22 "WHERE"
          BINARY_EXPR@22..33
            PROP_ACCESS_EXPR@22..28
              VAR_EXPR@22..24
                WHITESPACE@22..23 " "
                IDENT@23..24 "n"
              DOT@24..25 "."
              IDENT@25..28 "age"
            WHITESPACE@28..29 " "
            GT@29..30 ">"
            LITERAL_EXPR@30..33
              WHITESPACE@30..31 " "
              INT_LITERAL@31..33 "21"
    RETURN_CLAUSE@33..42
      WHITESPACE@33..34 " "
      RETURN_KW@34..40 "RETURN"
      RETURN_BODY@40..42
        RETURN_ITEMS@40..42
          RETURN_ITEM@40..42
            VAR_EXPR@40..42
              WHITESPACE@40..41 " "
              IDENT@41..42 "n"
