crates/cyrs-syntax/tests/snapshots/syntax_snapshots__err_leading_garbage.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 381
expression: "format_with_errors(\"garbage MATCH (n) RETURN n\")"
---
SOURCE_FILE@0..26
  ERROR@0..7
    IDENT@0..7 "garbage"
  STATEMENT@7..26
    MATCH_CLAUSE@7..17
      WHITESPACE@7..8 " "
      MATCH_KW@8..13 "MATCH"
      PATTERN@13..17
        PATTERN_PART@13..17
          NODE_PATTERN@13..17
            WHITESPACE@13..14 " "
            L_PAREN@14..15 "("
            NAME@15..16
              IDENT@15..16 "n"
            R_PAREN@16..17 ")"
    RETURN_CLAUSE@17..26
      WHITESPACE@17..18 " "
      RETURN_KW@18..24 "RETURN"
      RETURN_BODY@24..26
        RETURN_ITEMS@24..26
          RETURN_ITEM@24..26
            VAR_EXPR@24..26
              WHITESPACE@24..25 " "
              IDENT@25..26 "n"
---errors---
@0: expected statement
